# swh-compressor

./: CMakeLists.txt  README.md  benchmark.cpp  compression_layer.cpp  main.cpp
file_list/: C_blobs.augmented.hash_sorted_small.csv
include/: Magic.hpp  SpookyV2.h  dkm.hpp  dkm_parallel.hpp  lsh_utils.h  minhash.h  my_dataframe.h  permutation.h  rapidcsv.h  simhash.h  utils.hpp
result/: NEW_results.txt  NEW_results_small.txt  minhash_grid_search.txt  simhash_sort.txt
src/: Magic.cpp  SpookyV2.cpp  minhash.cpp  simhash.cpp
